Portfolio Press 0.9

- Paging bug fixes for portfolio items
- Fix for blockquote missing image
- Removed portfolio post type code
- Replaced portfolio taxonomy templates with archive-portfolio
- Renamed loop.php to content.php
- Added post format support for quotes, images, and galleries

Portfolio Press 0.8

- WordPress 3.1 or higher is now required
- Updated Spanish translations from Eduardo Larequi
- German translations added by Sandro Bauer
- Added Russian translations from Alexander (http://k-notes.ru)
- Removed Simple Custom Post Type Archives Plugin
- Added support for Portfolio Post Type plugin
- Updated overlay bug for full width portfolio
- Simplified code for portfolio content
- Added print stylesheet to style.css
- Updated portfolio taxonomy tags
- Added template for portfolio categories
- Removed wp_title filtering

Portfolio Press 0.7.5

- Fixes menu placement option
- Fixes menu styling for widget areas
- Fixes styling in iOS devices
- Fixes left column layout in portfolio pages
- Updates icons in options panel
- Fixes for comment display on single.php
- Added option for displaying portfolio archives full width
- Merged css reset into main stylesheet

Portfolio Press 0.7.4

- Paging bug fixes when portfolio is set as home page
- Checkbox fixes for options panel
- Styling changes to selected menu parent in drop down
- Option for changing header color

Portfolio Press 0.7.3

- Better syntax for options conditionals
- Minor style updates as recommended by WordPress Theme Team
- Chinese translations by Sunny Lau
- Updated Spanish Translations from Eduardo Larequi
- Changed "current-page-parent" to "current-menu-parent" in css

Portfolio Press 0.7.2

- Changed image path in options.php back to get_bloginfo('template_url')
- Deleted styles folder
- Removed option to set portfolio as home.  Better done through core..

Portfolio Press 0.7

- Major updates to the options panel
- Minor updates to how Portfolio post type is set up
- Update to screenshot image
