@@ -7,7 +7,7 @@ Theme URI: http://wptheming.com/portfolio-theme/
 Version: 0.9
 License: GNU General Public License
 License URI: license.txt
-Tags: translation-ready, microformats, two-columns, custom-menu
+Tags: translation-ready, microformats, two-columns, custom-menu, post-formats
 
 Credits:
 
@@ -575,6 +575,7 @@ figure {
 	position: relative;
 }
 .image-wrap h3 {
+	max-width:630px; /* width gets set via jquery */
 	background:#000;
 	background:rgba(0,0,0,.6);
 	color:#fff;
@@ -582,7 +583,6 @@ figure {
 	position:absolute;
 	bottom:13px;
 	left:6px;
-	width:610px;
 	display: none;
 	text-decoration: none;
 }
